# rust-traverse

./: Cargo.toml  README.md
benches/: bench_slice.rs
examples/: streaming.rs
src/: ext.rs  impls.rs  lib.rs  utils.rs
src/impls/: mod.rs  slice.rs  vec.rs
tests/: test.rs
