[package]

name = "traverse"
version = "0.0.12"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>",
           "Alexis Beingessner <a.beingessner@gmail.com>"]
repository = "https://github.com/reem/rust-traverse.git"
description = "Proof-of-concept trait for internal iterators called traversals."
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies.num]

[dev-dependencies]
quickcheck = "*"
rand = "*"
